[package]
name = "udemy_auto_gpt_playaround"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethers = "2.0.4"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
